k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-portfolio
  namespace: github-portfolio
  labels:
    app: github-portfolio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: github-portfolio
  template:
    metadata:
      labels:
        app: github-portfolio
    spec:
      containers:
      - name: github-portfolio
        image: akashkoche/github-portfolio:1.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
