k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-portfolio
  namespace: github-portfolio
  labels:
    app: github-portfolio
spec:
  type: ClusterIP
  selector:
    app: github-portfolio
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
